# os

./: .gitignore  .gitmodules
lab2/: Lab1.sln  Lab1.vcxproj  Lab1.vcxproj.filters  childprocess.c  childprocess.h  main.c  procmonlog.txt  report.tex
lab3/: CMakeLists.txt
lab3/cmake/: config.cmake  dependecies.cmake
lab3/src/: CMakeLists.txt  main.cpp
lab4/: lab4.sln  lab4.vcxproj  lab4.vcxproj.filters
lab4/src/: childprocess.c  childprocess.h  main.c
lab5/: lab5.sln  lab5.vcxproj  lab5.vcxproj.filters
lab5/src/: main.c
lab6/: lab6.sln
lab6/include/network/: constants.hpp  graph.hpp  request.hpp  response.hpp  topology.hpp  tree_topology.hpp
lab6/include/network/topologies/: tree.hpp
lab6/include/tasking/: launcher.hpp
lab6/include/utility/: commandline.hpp  my_ranges.hpp  string.hpp  unrolled.hpp
lab6/master/: master.vcxproj  master.vcxproj.filters
lab6/master/src/: interface.cpp  interface.hpp  main.cpp
lab6/network/: network.vcxproj  network.vcxproj.filters
lab6/slave/: slave.vcxproj  slave.vcxproj.filters
lab6/slave/src/: interface.cpp  interface.hpp  main.cpp
lab6/tasking/: tasking.vcxproj  tasking.vcxproj.filters
lab6/tasking/src/: launcher.cpp
lab6/utility/: utility.vcxproj  utility.vcxproj.filters
lab6/utility/src/: commandline.cpp  unrolled.cpp
